# adsp.freesurround

./: CMakeLists.txt
adsp.freesurround/resources/language/English/: strings.po
adsp.freesurround/resources/skins/Confluence/720p/: DialogMasterModeFreeSurround.xml
debian/: changelog  changelog.in  control  copyright  rules
src/: ChannelMaps.cpp  ChannelMaps.h  DSPProcessFreeSurround.cpp  DSPProcessFreeSurround.h  FreeSurroundDecoder.cpp  FreeSurroundDecoder.h  FreeSurroundSettings.cpp  FreeSurroundSettings.h  GUIDialogFreeSurround.cpp  GUIDialogFreeSurround.h  client.cpp  client.h
